# Grand-Strategy-Game

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  plan.md
include/: CONSTANTS.h  ClientMessage.h  Company.h  Entity.h  EventHandler.h  Game.h  GameCore.h  GraphicsManager.h  Message.h  Player.h  ServerMessage.h  Tile.h  UITools.h  World.h  World_DEPRECATED.h  tile.h
include/GameCore/: CoordinateSystems.h  Game.h  GameObject.h  Grouping.h  Player.h  Tile.h  World.h
include/GameCore/CoordinateSystems/: AxialCoords.h  CoordinateSystems.h  CubeCoords.h  PixelCoords.h
include/Message/: Client.h  Commands.h  Server.h
include/Networking/: Connection.h
src/: ClientMessage.cpp  Company.cpp  Entity.cpp  EventHandler.cpp  Game.cpp  GraphicsManager.cpp  Player.cpp  ServerMessage.cpp  Tile.cpp  Tile_DEPRECATED.cpp  UITools.cpp  World.cpp  World_DEPRECATED.cpp  client.cpp  main.cpp  server.cpp
src/GameCore/: CoordinateSystems.cpp  Game.cpp  GameObject.cpp  Grouping.cpp  Player.cpp  World.cpp  test1.cpp
src/GameCore/CoordinateSystems/: AxialCoords.cpp  CoordinateSystems.cpp  CubeCoords.cpp  PixelCoords.cpp
src/Message/: Client.cpp  Server.cpp
